# rust_api_with_db

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
app/: brunch-config.js  package.json
app/elm/: elm-package.json  main.elm
app/js/: app.js
migrations/2022-04-10-042251_create_books/: down.sql  up.sql
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
