[package]
name = "rust_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.0.0", features = ["postgres"]}
diesel_codegen = {version = "0.16.0", features = ["postgres"]}
dotenv = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"