[package]
name = "rust_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.0.0", features = ["postgres"]}
diesel_codegen = {version = "0.16.0", features = ["postgres"]}
dotenv = "0.9.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"

rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {version = "0.4", default-features = false, features = ["json"]}

[[bin]]
name = "main"
path = "src/main.rs"
